# spotify-buddylist

./: .gitignore  Dockerfile  README.md  build.sh  build_docker.sh
.github/workflows/: docker-build.yml
activity_api/: Cargo.toml
activity_api/src/: main.rs
activity_api_go/: main.go  server.go
activity_frontend/: package-lock.json  package.json  vue.config.js
activity_frontend/src/: App.vue
api/: go.mod  go.sum  server.go
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
frontend/src/components/: ItemCard.vue  UserCard.vue
